--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ header .search-bar-container label:hover{
     top: -120%; left: 0;
     min-height: 100vh;
     width: 100%;
+    z-index: 10000;
     background: rgba(0,0,0,.7);
     display: flex;
     align-items: center;
@@ -131,8 +132,8 @@ header .search-bar-container label:hover{
 }
 
 .login-form-container.active {
-    top: 0;
-}
+    top:0;
+  }
 
 .login-form-container form{
     margin: 2rem;
@@ -168,7 +169,7 @@ header .search-bar-container label:hover{
 }
 
 .login-form-container form label{
-    font-size: 1.5 rem;
+    font-size: 1.5rem;
 }
 
 .login-form-container form .btn {
@@ -193,8 +194,84 @@ header .search-bar-container label:hover{
 
 .login-form-container #form-close {
     position: absolute;
-    top: 2rem; right:3rem;
+    top:2rem; right:3rem;
     font-size: 5rem;
+    color:#fff;
+    cursor: pointer;
+}
+
+#menu-bar {
     color: #fff;
-    cursor: pointer ;
+    border: .1rem solid #fff;
+    border-radius: .5rem;
+    font-size: 3rem;
+    padding: .5rem 1.2rem;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* Media Queries */
+
+@media (max-width: 1200px){
+
+    html {
+        font-size: 55%;
+    }
+
+}
+
+@media (max-width: 991px){
+
+    header {
+        padding: 2rem;
+    }
+
+}
+
+@media (max-width: 768px){
+
+    #menu-bar {
+        display: initial;
+
+    }
+
+    header .navbar {
+        position: absolute;
+        top: 100%; left: 0; right: 0;
+        background: #333;
+        border-top: .1rem solid rgba(255,255,255,.2);
+        padding: 1rem 2rem; 
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); 
+    }
+
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); 
+    }
+
+    header .navbar a {
+        display: block;
+        border-radius: .5rem;
+        padding: 1rem;
+        margin: 1rem 0;
+        background: #222; 
+    }
+}
+
+@media (max-width: 450px){
+
+    html {
+        font-size: 50%;
+    }
+
 }
